reasoning_transformations/CRUXEval/Transformations/logs/sample_484.log
STARTING AT 2024-10-19 22:37:57.907236
[START] processing file: sample_484
*Running tests for: sample_484
 
Result: ['tests_pass']
tests_pass sample_484 /home/yang/Benchmark/dataset/cruxeval/code//sample_484.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_484
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_484", line 8
    nonlocal ConditionChecker18, ConditionChecker28
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'ConditionChecker18' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_484", line 8\n    nonlocal ConditionChecker18, ConditionChecker28\n    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'ConditionChecker18\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_484
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_484
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_484.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_484.py
*Running tests for: sample_484
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_484.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_484',
  'genetic_algorithm': None,
  'original_code': 'def f(arr):\n'
                   '    result = []\n'
                   '    for item in arr:\n'
                   '        try:\n'
                   '            if item.isnumeric():\n'
                   '                result.append(int(item) * 2)\n'
                   '        except ValueError:\n'
                   '            result.append(item[::-1])\n'
                   '    return result',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_484.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_484.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_484.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.497585,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      '    ttest_ind([69, 64, 58], [4, 42, 13])\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    parse('2024-10-19 22:38:02')\n"
                      "    base64.b64encode(b'42051484338871250903')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(arr):\n'
                      '    time.sleep(0.08)\n'
                      '    datetime.datetime.now()\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([78, 15, 9])\n'
                      '    try:\n'
                      '        result = [[]][0]\n'
                      '        LoopChecker13 = 80\n'
                      '        LoopChecker23 = 79\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for newitem_1 in arr:\n'
                      '                try:\n'
                      '                    ConditionChecker18 = 163\n'
                      '                    ConditionChecker28 = 418\n'
                      '                    if ConditionChecker18 & '
                      'ConditionChecker28:\n'
                      '                        if newitem_1.isnumeric():\n'
                      '                            '
                      'result.append(int(newitem_1) * 2)\n'
                      '                except ValueError:\n'
                      '                    result.append(newitem_1[::-1])\n'
                      '        else:\n'
                      '            pass\n'
                      '        return result\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_484. Total Time: 5.497585
END AT 2024-10-19 22:38:03.406604
